--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -69,7 +69,7 @@
 
   <footer class="page-footer teal">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-bottom: 0;">
         <div class="col l6 s12">
           <h5 class="white-text">Privacy Policy</h5>
           <p class="grey-text text-lighten-4">None of your data will be stored or used for any other purpose than for detecting offensive content.</p>
