--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,7 +20,12 @@
           <h5 class="header col s12 light">An online service which scans your tweets and assesses their potential offensiveness</h5>
         </div>
         <div class="row center">
-          <a href="" id="download-button" class="btn-large waves-effect waves-color:#1dcaff">Sign In to Twitter</a>
+          <a href="" id="download-button" class="btn-large waves-effect waves-color:#1dcaff">Enter your Twitter Handle</a>
+		  <form action="{{ url_for('addRegion') }}" method="post">
+			<input type="text" placeholder="Example: @therealdonaldtrump">
+			
+			<a href="stats.html" id="download-button" class="btn-large waves-effect waves-color:#1dcaff">Go!</a>
+			</form>
         </div>
         <br><br>
 
