--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -3,6 +3,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Social Eyes</title>
+  <link rel="shortcut icon" href="favicon.ico" />
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
